[tool.poetry]
name = "my-youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["<Mary> <<kass.o@yandex.ru>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.mypy]
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
ignore_missing_imports = true
